<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.github.jonasrutishauser</groupId>
		<artifactId>parent</artifactId>
		<version>19</version>
	</parent>

	<groupId>com.github.jonasrutishauser.javax</groupId>
	<artifactId>cdi-test</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<url>${url}</url>
	<name>CDI Test</name>
	<description>JUnit 5 extension for easy and efficient testing of CDI components</description>

	<properties>
		<root.artifactId>cdi-test</root.artifactId>
		<sonar.projectKey>com.github.jonasrutishauser:${project.artifactId}</sonar.projectKey>

		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-bom</artifactId>
				<version>8.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.weld</groupId>
				<artifactId>weld-core-bom</artifactId>
				<version>3.1.9.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-bom</artifactId>
				<version>4.11.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
            	<groupId>org.jboss.narayana.jta</groupId>
            	<artifactId>cdi</artifactId>
				<version>5.12.7.Final</version>
			</dependency>
			<dependency>
            	<groupId>org.jboss.narayana.jta</groupId>
            	<artifactId>narayana-jta</artifactId>
				<version>5.12.7.Final</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>cdi-test-api</module>
		<module>cdi-test-core</module>
		<module>cdi-test-jta</module>
		<module>cdi-test-jndi</module>
		<module>cdi-test-concurrency</module>
		<module>cdi-test-jpa</module>
		<module>cdi-test-ejb</module>
		<module>cdi-test-mp-config</module>
		<module>integration-tests</module>
		<module>cdi-test-mp-metrics</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<configuration>
						<goals>deploy</goals><!-- do not generate a site -->
						<tagNameFormat>javax/v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>java-greater-than-8</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<maven.compiler.release>8</maven.compiler.release>
			</properties>
		</profile>
	</profiles>

	<scm>
		<connection>${scm.connection}</connection>
		<developerConnection>${scm.developerConnection}</developerConnection>
		<url>${scm_url}</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<site>
			<id>github</id>
			<url>${distributionManagement.site.url}</url>
		</site>
	</distributionManagement>
</project>